browser/themes/windows/browser.css
/* ... */
#social-mark-button {
  -moz-image-region: rect(0, 16px, 16px, 0);
}



#bookmarks-menu-button.bookmark-item {
  list-style-image: url("chrome://browser/skin/places/bookmark.png");
  -moz-image-region: rect(0px 16px 16px 0px);
}

#bookmarks-menu-button.bookmark-item[starred] {
  -moz-image-region: rect(0px 48px 16px 32px);
}

#bookmarks-menu-button.bookmark-item > .toolbarbutton-menubutton-button > .toolbarbutton-icon {
  -moz-margin-start: 5px;
}

#bookmarks-menu-button[customizableui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
  padding-top: 2px;
  padding-bottom: 2px;
}

#BMB_bookmarksPopup[side="top"],
#BMB_bookmarksPopup[side="bottom"] {
  margin-left: -20px;
  margin-right: -20px;
}

#BMB_bookmarksPopup[side="left"],
#BMB_bookmarksPopup[side="right"] {
  margin-top: -20px;
  margin-bottom: -20px;
}



#editBookmarkPanelStarIcon {
  list-style-image: url("chrome://browser/skin/places/starred48.png");
  width: 48px;
  height: 48px;
}

#editBookmarkPanelStarIcon[unstarred] {
  list-style-image: url("chrome://browser/skin/places/unstarred48.png");
}

#editBookmarkPanelTitle {
  font-size: 130%;
}

#editBookmarkPanelHeader,
#editBookmarkPanelContent {
  margin-bottom: .5em;
}


#editBMPanel_folderTree {
  min-width: 27em;
}

.panel-promo-box {
  margin: 10px -10px -10px;
  padding: 8px 10px;
  border-top: 1px solid ThreeDShadow;
  background-image: linear-gradient(hsla(0,0%,0%,.15), hsla(0,0%,0%,.08) 6px);
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

@media (-moz-windows-default-theme) {
  .panel-promo-box {
    border-top-style: none;
    background: #f1f5fb;
    color: GrayText;
    box-shadow: 0px 1px 2px rgb(204,214,234) inset;
  }
}

.panel-promo-icon {
  list-style-image: url("chrome://browser/skin/sync-notification-24.png");
  -moz-margin-end: 10px;
  vertical-align: middle;
}

.panel-promo-closebutton {
  -moz-appearance: none;
  border: none;
  -moz-margin-end: -10px;
  margin-top: -5px;
}

.panel-promo-closebutton > .toolbarbutton-text {
  padding: 0;
  margin: 0;
}



#sidebar {
  background-color: Window;
}

#sidebar-title {
  -moz-padding-start: 0px;
}

.browserContainer > findbar {
  background-color: -moz-dialog;
  color: -moz-DialogText;
  text-shadow: none;
}



#TabsToolbar {
  min-height: 0;
  padding: 0;
}

#TabsToolbar:not(:-moz-lwtheme) {
  background-image: linear-gradient(to top, @toolbarShadowColor@ 2px, rgba(0,0,0,.05) 2px, transparent 50%);
}

#main-window[tabsintitlebar] #TabsToolbar {
  background-color: transparent;
}

%ifndef WINDOWS_AERO
@media (-moz-windows-default-theme) {
  #main-window[sizemode=normal] #TabsToolbar {
    padding-left: 2px;
    padding-right: 2px;
  }
}
%endif

%include ../shared/tabs.inc.css

%ifndef WINDOWS_AERO

@media (-moz-windows-theme: luna-blue) {
  #main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-arrowscrollbox > .scrollbutton-up,
  #main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-arrowscrollbox > .scrollbutton-down {
    list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.png);
  }

  #main-window[tabsintitlebar]:not([inFullscreen]) .tabs-newtab-button,
  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #new-tab-button,
  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > toolbarpaletteitem > #new-tab-button {
    list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.png);
  }

  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #alltabs-button {
    list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png");
  }

  #main-window[tabsintitlebar]:not([inFullscreen]) #TabsToolbar > #tabview-button {
    list-style-image: url(chrome://browser/skin/tabview/tabview-inverted.png);
  }

  #main-window[tabsintitlebar]:not([inFullscreen]) .tab-close-button:not(:hover):not([selected="true"]) {
    -moz-image-region: rect(0, 64px, 16px, 48px);
  }

  #tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
  .tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
  #tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
    background-image: url("chrome://browser/skin/tabbrowser/tab-separator-luna-blue.png");
  }
}
%endif

#main-window[tabsintitlebar]:not([inFullscreen]) .tabbrowser-tab:not([selected]):not(:-moz-lwtheme) {
  color: CaptionText;
}


.tabbrowser-tab:-moz-lwtheme:not([selected=true]) {
  color: inherit;
}

.tabbrowser-tab[selected=true]:-moz-lwtheme {
  
  text-shadow: 0 -0.5px 1.5px white;
}


.tabbrowser-tab:focus > .tab-stack > .tab-content > .tab-label {
  outline: 1px dotted;
}


.tab-drop-indicator {
  list-style-image: url(chrome://browser/skin/tabbrowser/tabDragIndicator.png);
  margin-bottom: -9px;
  z-index: 3;
}


.tab-close-button {
  -moz-appearance: none;
  border: none;
}



.tabbrowser-arrowscrollbox > .scrollbutton-up,
.tabbrowser-arrowscrollbox > .scrollbutton-down {
  list-style-image: url("chrome://browser/skin/tabbrowser/tab-arrow-left.png");
  margin: 0;
  padding-right: 2px;
  border-right: 2px solid transparent;
  background-origin: border-box;
}

.tabbrowser-arrowscrollbox > .scrollbutton-up:-moz-lwtheme-brighttext,
.tabbrowser-arrowscrollbox > .scrollbutton-down:-moz-lwtheme-brighttext {
  list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.png);
}

.tabbrowser-arrowscrollbox > .scrollbutton-up[disabled],
.tabbrowser-arrowscrollbox > .scrollbutton-down[disabled] {
  opacity: .4;
}

.tabbrowser-arrowscrollbox > .scrollbutton-up:-moz-locale-dir(rtl),
.tabbrowser-arrowscrollbox > .scrollbutton-down:-moz-locale-dir(ltr) {
  transform: scaleX(-1);
}

.tabbrowser-arrowscrollbox > .scrollbutton-down {
  transition: 1s background-color ease-out;
}
/* ... */

