Bug 879588 - Tab title is hard to read in windows high-contrast mode with a light LWT (yellow text). r=gijs
UltraBlame original commit: 306f68dadc048e29430f976182958fe2d46de869

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -1460,16 +1460,6 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
 }
 
 
-.tabbrowser-tab:-moz-lwtheme:not([selected=true]) {
-  color: inherit;
-}
-
-.tabbrowser-tab[selected=true]:-moz-lwtheme {
-  
-  text-shadow: 0 -0.5px 1.5px white;
-}
-
-
 .tabbrowser-tab:focus > .tab-stack > .tab-content > .tab-label {
   outline: 1px dotted;
 }
